# renogy-rs

./: .gitignore  ARCHIVER.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  README.md  SYSTEM_TEST.md  renogy-aprs.service  renogy-bms-collector.service  renogy-bt.btsnoop  start_aprs.sh  start_collector.sh
.claude/: settings.local.json
.claude/skills/release/: SKILL.md
.github/workflows/: build-deb.yml
aprs/: Cargo.toml
aprs/debian/: postinst
aprs/default/: renogy-aprs  renogymon-aprs
aprs/src/: aprsis.rs  callsign.rs  lib.rs  position.rs  sink.rs  telemetry.rs
aprs/systemd/: renogy-aprs.service  renogymon-aprs.service
aprs/sysusers/: renogy-aprs.conf  renogymon-aprs.conf
archiver/: Cargo.toml
archiver/debian/: postinst
archiver/src/: main.rs
archiver/src/archiver/: mod.rs  parquet_writer.rs  state.rs  vm_export.rs
archiver/systemd/: renogy-archiver-export.service  renogymon-archiver-export.service  renogymon-archiver-export.timer
archiver/sysusers/: renogy-archiver.conf  renogymon-archiver.conf
archiver/tests/: readiness.rs  run_export.rs  system.rs
archiver/tests/common/: mod.rs
collector/: Cargo.toml
collector/debian/: postinst
collector/default/: renogy-collector  renogymon-collector
collector/systemd/: renogy-bms-collector.service  renogymon-bms-collector.service
collector/sysusers/: renogy-collector.conf  renogymon-collector.conf
doc/: bt2-gatt-modbus-protocol.txt
etc/default/: renogy-rs
examples/: README.md
puller/: Cargo.toml
puller/debian/: postinst
puller/default/: renogy-archiver-puller  renogymon-archiver-puller
puller/src/: main.rs
puller/systemd/: renogy-archiver-puller.service  renogy-archiver-puller.timer  renogymon-archiver-puller.service
puller/sysusers/: renogy-archiver-puller.conf  renogymon-archiver-puller.conf
puller/tests/: pull.rs  status.rs
puller/tmpfiles/: renogy-archiver-puller.conf  renogymon-archiver-puller.conf
src/: alarm.rs  any_transport.rs  bin_common.rs  bt2.rs  device.rs  emulator.rs  error.rs  lib.rs  main.rs  pdu.rs  query.rs  registers.rs  serial.rs  system_summary.rs  transport.rs  util.rs  vm_client.rs
src/archiver/: mod.rs  state.rs  vm_export.rs
src/collector/: buffer.rs  metrics.rs  mod.rs  server.rs  writer.rs
src/tui/: app.rs  event.rs  history.rs  mod.rs  ui.rs  vm_client.rs
systemd/: renogy-aprs.service  renogy-bms-collector.service  renogy-rs.sysusers
