[package]
name = "renogy-rs"
version = "0.2.1"
edition = "2024"
authors = ["Christopher Hoover <ch@murgatroid.com>"]
license = "MIT"
description = "Rust tools for monitoring Renogy BMS batteries via Bluetooth and serial"
homepage = "https://github.com/charlieh0tel/renogy-rs"
repository = "https://github.com/charlieh0tel/renogy-rs"

[dependencies]
futures = "0.3"
crc = "3.3.0"
byteorder = "1.4.3"
uom = { version = "0.35.0", features = ["si", "f32", "std"] }
bitflags = "2.4.1"
tokio = { version = "1", features = ["full"] }
tokio-modbus = "0.8.1"
bluebus = "0.1.10"
zbus = "5.12.0"
tokio-serial = "5.4.5"
clap = { version = "4.5.53", features = ["derive"] }
ratatui = "0.29"
ratatui-macros = "0.6"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
influxdb-line-protocol = "2"
prometheus-client = "0.23"
prometheus-http-query = { version = "0.8", default-features = false, features = ["rustls-tls"] }
thiserror = "2"
agw = "0.1.9"
async-trait = "0.1.81"

[package.metadata.deb]
maintainer = "Christopher Hoover <ch@murgatroid.com>"
copyright = "2024-2026, Christopher Hoover"
license-file = ["LICENSE", "4"]
extended-description = """\
Rust tools for monitoring Renogy BMS batteries via Bluetooth and serial, \
with APRS telemetry reporting and a terminal UI."""
section = "hamradio"
priority = "optional"
depends = "$auto"
assets = [
    ["target/release/renogy-bms-collector", "usr/bin/", "755"],
    ["target/release/renogy-aprs", "usr/bin/", "755"],
    ["target/release/renogy-tui", "usr/bin/", "755"],
    ["systemd/renogy-bms-collector.service", "usr/lib/systemd/system/", "644"],
    ["systemd/renogy-aprs.service", "usr/lib/systemd/system/", "644"],
    ["README.md", "usr/share/doc/renogy-rs/", "644"],
    ["etc/default/renogy-rs", "etc/default/", "644"],
]
conf-files = ["/etc/default/renogy-rs"]

