[package]
name = "renogy-aprs"
version = "0.2.3"
edition = "2024"
authors = ["Christopher Hoover <ch@murgatroid.com>"]
license = "MIT"
description = "Report Renogy BMS telemetry to APRS via direwolf"
homepage = "https://github.com/charlieh0tel/renogy-rs"
repository = "https://github.com/charlieh0tel/renogy-rs"

[dependencies]
renogy-rs = { path = ".." }
agw = "0.1.9"
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[package.metadata.deb]
name = "renogy-aprs"
maintainer = "Christopher Hoover <ch@murgatroid.com>"
copyright = "2024-2026, Christopher Hoover"
section = "hamradio"
priority = "optional"
depends = "$auto"
extended-description = "Reads Renogy BMS telemetry from VictoriaMetrics and reports it to APRS via direwolf."
assets = [
    ["target/release/renogy-aprs", "usr/bin/", "755"],
    ["systemd/renogy-aprs.service", "usr/lib/systemd/system/", "644"],
    ["sysusers/renogy-aprs.conf", "usr/lib/sysusers.d/renogy-aprs.conf", "644"],
    ["default/renogy-aprs", "etc/default/", "644"],
]
conf-files = ["/etc/default/renogy-aprs"]
