[package]
name = "renogy-aprs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Report Renogy BMS telemetry to APRS via direwolf"
homepage.workspace = true
repository.workspace = true

[dependencies]
renogy-rs.workspace = true
agw.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
chrono.workspace = true

[package.metadata.deb]
name = "renogy-aprs"
copyright = "2024-2026, Christopher Hoover"
section = "hamradio"
priority = "optional"
depends = "$auto"
extended-description = "Reads Renogy BMS telemetry from VictoriaMetrics and reports it to APRS via direwolf."
maintainer-scripts = "debian"
assets = [
    ["target/release/renogy-aprs", "usr/bin/", "755"],
    ["sysusers/renogy-aprs.conf", "usr/lib/sysusers.d/renogy-aprs.conf", "644"],
    ["default/renogy-aprs", "etc/default/", "644"],
]
conf-files = ["/etc/default/renogy-aprs"]

[package.metadata.deb.systemd-units]
unit-scripts = "systemd"
unit-name = "renogy-aprs"
enable = true
start = true
