[package]
name = "renogymon-aprs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Report Renogy BMS telemetry to APRS via direwolf"
homepage.workspace = true
repository.workspace = true

[dependencies]
renogy.workspace = true
agw.workspace = true
async-trait.workspace = true
clap = { workspace = true, features = ["env"] }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
gpsd_proto = "1.0.0"

[dev-dependencies]
chrono.workspace = true

[package.metadata.deb]
name = "renogymon-aprs"
copyright = "2024-2026, Christopher Hoover"
section = "hamradio"
priority = "optional"
depends = "$auto"
extended-description = "Reads Renogy BMS telemetry from VictoriaMetrics and reports it to APRS via direwolf."
maintainer-scripts = "debian"
assets = [
    ["target/release/renogymon-aprs", "usr/bin/", "755"],
    ["sysusers/renogymon-aprs.conf", "usr/lib/sysusers.d/renogymon-aprs.conf", "644"],
    ["default/renogymon-aprs", "etc/default/", "644"],
]
conf-files = ["/etc/default/renogymon-aprs"]

[package.metadata.deb.systemd-units]
unit-scripts = "systemd"
unit-name = "renogymon-aprs"
enable = true
start = true
