[package]
name = "renogy-archiver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Export Renogy BMS metrics from VictoriaMetrics to Parquet"
homepage.workspace = true
repository.workspace = true

[dependencies]
arrow.workspace = true
parquet.workspace = true
reqwest = { workspace = true, features = ["json"] }
chrono = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true

[package.metadata.deb]
name = "renogy-archiver"
copyright = "2024-2026, Christopher Hoover"
section = "hamradio"
priority = "optional"
depends = "$auto, rsync"
recommends = "openssh-server"
extended-description = "Exports Renogy BMS history from VictoriaMetrics to daily Parquet files for an archive host to pull."
maintainer-scripts = "debian"
assets = [
    ["target/release/renogy-archiver", "usr/bin/", "755"],
    ["sysusers/renogy-archiver.conf", "usr/lib/sysusers.d/renogy-archiver.conf", "644"],
]

[package.metadata.deb.systemd-units]
unit-scripts = "systemd"
unit-name = "renogy-archiver-export"
enable = true
start = true

[dev-dependencies]
renogy-rs = { workspace = true, features = ["emulator"] }
axum.workspace = true
tempfile.workspace = true
