[package]
name = "renogy-collector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Collect Renogy BMS metrics to VictoriaMetrics, with a terminal UI"
homepage.workspace = true
repository.workspace = true

[dependencies]
renogy-rs.workspace = true
clap.workspace = true
prometheus-client.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui.workspace = true
crossterm.workspace = true

[package.metadata.deb]
name = "renogy-collector"
copyright = "2024-2026, Christopher Hoover"
section = "hamradio"
priority = "optional"
depends = "$auto"
extended-description = "Collects Renogy BMS metrics over Bluetooth/serial and exports to VictoriaMetrics, plus a terminal UI."
maintainer-scripts = "debian"
assets = [
    ["target/release/renogy-bms-collector", "usr/bin/", "755"],
    ["target/release/renogy-tui", "usr/bin/", "755"],
    ["sysusers/renogy-collector.conf", "usr/lib/sysusers.d/renogy-collector.conf", "644"],
    ["default/renogy-collector", "etc/default/", "644"],
]
conf-files = ["/etc/default/renogy-collector"]

[package.metadata.deb.systemd-units]
unit-scripts = "systemd"
unit-name = "renogy-bms-collector"
enable = true
start = true
