[package]
name = "renogymon-collector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Collect Renogy BMS metrics to VictoriaMetrics, with a terminal UI"
homepage.workspace = true
repository.workspace = true

[dependencies]
renogy.workspace = true
clap.workspace = true
prometheus-client.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ratatui.workspace = true
crossterm.workspace = true

[package.metadata.deb]
name = "renogymon-collector"
copyright = "2024-2026, Christopher Hoover"
section = "hamradio"
priority = "optional"
depends = "$auto"
extended-description = "Collects Renogy BMS metrics over Bluetooth/serial and exports to VictoriaMetrics, plus a terminal UI."
maintainer-scripts = "debian"
assets = [
    ["target/release/renogymon-bms-collector", "usr/bin/", "755"],
    ["target/release/renogymon-tui", "usr/bin/", "755"],
    ["sysusers/renogymon-collector.conf", "usr/lib/sysusers.d/renogymon-collector.conf", "644"],
    ["default/renogymon-collector", "etc/default/", "644"],
]
conf-files = ["/etc/default/renogymon-collector"]

[package.metadata.deb.systemd-units]
unit-scripts = "systemd"
unit-name = "renogymon-bms-collector"
enable = true
start = true
