[package]
name = "renogymon-archiver-puller"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pull Renogy Parquet archives from the RPi4 over Tailscale"
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "renogymon-archiver-puller"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["env"] }
chrono.workspace = true
fs2.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

[package.metadata.deb]
copyright = "2024-2026, Christopher Hoover"
section = "utils"
priority = "optional"
depends = "$auto, rsync, openssh-client"
extended-description = """\
Pulls daily Parquet archives staged by renogymon-archiver on the RPi4 over rsync/SSH \
(Tailscale), deleting them on the source after a successful transfer."""
maintainer-scripts = "debian"
assets = [
    ["target/release/renogymon-archiver-puller", "usr/bin/", "755"],
    ["sysusers/renogymon-archiver-puller.conf", "usr/lib/sysusers.d/renogymon-archiver-puller.conf", "644"],
    ["tmpfiles/renogymon-archiver-puller.conf", "usr/lib/tmpfiles.d/renogymon-archiver-puller.conf", "644"],
    ["default/renogymon-archiver-puller", "etc/default/", "644"],
]
conf-files = ["/etc/default/renogymon-archiver-puller"]

[package.metadata.deb.systemd-units]
unit-scripts = "systemd"
unit-name = "renogymon-archiver-puller"
enable = true
start = true
